--- a/courses.html
+++ b/courses.html
@@ -19,7 +19,6 @@
 		<div class="popup_dark"></div>
 		<div class="container">
 			<div class="popup__wrap popup-one">
-
 				<div class="popup__info">
 					<div class="popup__info__title">
 						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
@@ -439,8 +438,8 @@
 		<div class="container">
 			<div class="header__wrap">
 				<div class="header__promo">
-					<h1>RAMZIL SCHOOL</h1>
-					<p>"Пространство красоты и уюта"</p>
+					<h1>RAMZI SCHOOL</h1>
+					<p>"Точка профессионального роста"</p>
 				</div>
 			</div>
 		</div>
@@ -517,7 +516,7 @@
 				<p>"В каждый курс мы вкладываем нашу душу и опыт"</p>
 			</div>
 			<div class="courses__wrap">
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/6.png" alt="">
 					<div class="courses__item__info">
 						<h2>Чек-лист мастера</h2>
@@ -534,7 +533,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/7.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОБНЫЙ ДЕНЬ «НОВАЯ ПРОФЕССИЯ»</h2>
@@ -551,7 +550,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/1.png" alt="">
 					<div class="courses__item__info">
 						<h2>«МАСТЕР ЗДЕСЬ И СЕЙЧАС»
@@ -570,7 +569,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/3.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС ЭСТЕТИЧЕСКИЙ ПЕДИКЮР С ПОКРЫТИЕМ ГЕЛЬ ЛАК
@@ -588,7 +587,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/1.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС КОМБИНИРОВАННОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК САМОЙ СЕБЕ В ДОМАШНИХ УСЛОВИЯХ
@@ -606,7 +605,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/4.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
@@ -625,7 +624,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/5.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
@@ -644,7 +643,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item element-animation">
+				<div class="courses__item">
 					<img src="./src/assets/img/Courses/8.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС НАРАЩИВАНИЯ НОГТЕЙ БЕЗ ОПИЛА
