--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div class="container">
 			<div class="header__wrap">
 				<div class="header__promo">
-					<h1>RAMZIL NAIL</h1>
+					<h1>RAMZI NAIL</h1>
 					<p>"Пространство красоты и уюта"</p>
 					<a class="button" href="https://dikidi.ru/#widget=114156">Записаться</a>
 				</div>
@@ -88,7 +88,7 @@
 			<div class="offers__head element-animation">Наши услуги</div>
 			<div class="offers__text element-animation">"Мы можем много и немножко больше!"</div>
 			<div class="offers__wrap">
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_one"
 							src="./src/assets/img/Маникюр.jpg" alt="Записаться">
@@ -97,7 +97,7 @@
 					<h3 class="offers__title">Маникюр</h3>
 					<p>От 900р.</p>
 				</a>
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_two"
 							src="./src/assets/img/Педикюр.jpg" alt="Записаться">
@@ -106,7 +106,7 @@
 					<h3 class="offers__title">Педикюр</h3>
 					<p>От 1100р.</p>
 				</a>
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_one"
 							src="./src/assets/img/main/4.png" alt="Записаться">
@@ -115,13 +115,13 @@
 					<h3 class="offers__title">Оформление бровей</h3>
 					<p>От 400р.</p>
 				</a>
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_two"
 							src="./src/assets/img/Наращивание ресниц.jpeg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
-					<h3 class="offers__title">Наращивание рестниц</h3>
+					<h3 class="offers__title">Наращивание ресниц</h3>
 					<p>От 800р.</p>
 				</a>
 			</div>
