Фикс номеров и кнопок

--- a/courses.html
+++ b/courses.html
@@ -27,7 +27,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/6.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
 						</div>
 						<div class="text">
 							<h4>Список закупки</h4>
@@ -44,7 +44,7 @@
 								Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
 								просто напиши мне
 							</p>
-
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
 						</div>
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/7.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
 							<h4>Пробный день - это рациональный и логичный ответ на вопросы:</h4>
@@ -115,7 +115,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/1.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
 							<h4>Базовый курс «Комбинированный маникюр с покрытием гель лак с 0» </h4>
@@ -190,7 +190,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/3.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
 							<h4>Программа обучения с выдачей официального диплома государственного образца с присвоением 
@@ -237,7 +237,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/8.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
 							<h3>Формат обучения: </h3>
@@ -277,7 +277,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/4.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
 							<h3>Формат обучения: </h3>
@@ -312,7 +312,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/5.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
 							<h3>Формат обучения:</h3>
@@ -341,7 +341,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/2.png" alt="">
-							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
 							<p>Программа обучения с выдачей официального диплома государственного образца с присвоением профессии «мастер ногтевого сервиса»</p>
@@ -431,7 +431,7 @@
 				</li>
 			</ul>
 		</ul>
-		<a href="tel:89022277790" class="nav__call button">+7-902-227-77-90</a>
+		<a href="tel:89022277790" class="nav__call button">+7-920-120-44-35</a>
 	</nav>
 	<!-- Hero section -->
 	<header class="header">
@@ -526,7 +526,7 @@
 								<p class="new">БЕСПЛАТНО</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-one" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -543,7 +543,7 @@
 								<p class="new">3000 р.</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-two" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -562,7 +562,7 @@
 								<p class="new">18000 р.</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-three" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -580,7 +580,7 @@
 								<p class="new">12000 р.</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-four" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -598,7 +598,7 @@
 								<p class="new">7000 р.</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-five" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -617,7 +617,7 @@
 								<p class="new">8000 р.</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-six" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -636,7 +636,7 @@
 								<p class="new">8000 р.</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-seven" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -654,7 +654,7 @@
 								<p class="new">12000 р.</p>
 							</div>
 							<span>
-								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
 								<button id="course-eight" class="more">Подробнее</button>
 							</span>
 						</div>
@@ -734,7 +734,7 @@
 						<li>
 							<div>What's App:</div>
 							<a
-								href="https://api.whatsapp.com/send/?phone=89022277790&text=Здравствуйте%2C+у+меня+есть+вопрос">+7-902-227-77-90</a>
+								href="https://wa.me/+79201204435">+7-920-120-44-35</a>
 						</li>
 						<li>
 							<div>Вконтакте:</div>
