Доделал кнопки и сделал попап на весь экран телефона

--- a/courses.html
+++ b/courses.html
@@ -59,7 +59,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/7.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
 						</div>
 						<div class="text">
 							<h4>Пробный день - это рациональный и логичный ответ на вопросы:</h4>
@@ -100,6 +100,7 @@
 								<li>Консультации по любым возникающим вопросам </li>
 								<li>Скидочная программа лояльности при решении получить профессиональное, официальное образование в данном направлении</li>
 							</ul>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
 						</div>
 					</div>
 				</div>
@@ -115,7 +116,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/1.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
 						</div>
 						<div class="text">
 							<h4>Базовый курс «Комбинированный маникюр с покрытием гель лак с 0» </h4>
@@ -176,6 +177,7 @@
 								<li>оборудованное рабочее место, материалы и модели предоставляются </li>
 								<li>фото и видео контент для социальных сетей ваших работ</li>
 							</ul>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
 						</div>
 					</div>
 				</div>
@@ -190,7 +192,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/3.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
 						</div>
 						<div class="text">
 							<h4>Программа обучения с выдачей официального диплома государственного образца с присвоением 
@@ -223,6 +225,7 @@
 								<li>оборудованное рабочее место, материалы и модели предоставляются</li>
 								<li>фото и видео контент для социальных сетей ваших работ</li>
 							</ul>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
 						</div>
 					</div>
 				</div>
@@ -237,7 +240,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/8.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
 						</div>
 						<div class="text">
 							<h3>Формат обучения: </h3>
@@ -263,6 +266,7 @@
 								<li>✅списки закупок магазинов и платформ, где можно приобрести все необходимое для работы дома по выгодным ценам </li>
 								<li>✅оборудованное рабочее место, материалы предоставляются</li>
 							</ul>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
 						</div>
 					</div>
 				</div>
@@ -277,7 +281,7 @@
 					<div class="popup__info__desc">
 						<div class="buy">
 							<img src="./src/assets/img/Courses/4.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
 						</div>
 						<div class="text">
 							<h3>Формат обучения: </h3>
@@ -297,7 +301,7 @@
 								<li>✅ оборудованное рабочее место, материалы и модели предоставляются </li>
 								<li>✅ фото и видео контент для социальных сетей ваших работ</li>
 							</ul>
-
+							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
 						</div>
 					</div>
 				</div>
