--- a/courses.html
+++ b/courses.html
@@ -693,21 +693,21 @@
 						<img class="arrow" src="./src/assets/img/arrow.png" alt="">
 					</a>
 					<!--   <div class="slider"> -->
-					<div class="items" style="min-height: 725px; width: 400px;" id="items">
-						<div class="item">
-							<img src="./src/assets/img/rewies_school/1.webp" alt="">
+					<div class="items" style="min-height: 725px;" id="items">
+						<div class="item" style="text-align: center;">
+							<img style="max-width: 400px; text-align: center;" src="./src/assets/img/rewies_school/1.webp" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/rewies_school/2.webp" alt="">
+							<img style="max-width: 400px; text-align: center;" src="./src/assets/img/rewies_school/2.webp" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/rewies_school/3.webp" alt="">
+							<img style="max-width: 400px; text-align: center;" src="./src/assets/img/rewies_school/3.webp" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/rewies_school/4.webp" alt="">
+							<img style="max-width: 400px; text-align: center;" src="./src/assets/img/rewies_school/4.webp" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/rewies_school/5.webp" alt="">
+							<img style="max-width: 400px; text-align: center;" src="./src/assets/img/rewies_school/5.webp" alt="">
 						</div>
 					</div>
 					<!--   </div> -->
