Фикс картинки в примерах, метрика

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 	<script type="text/javascript" src="https://spikmi.org/Widget?Id=16402" defet></script>
 </head>
 
-<body>
+<body class="nailbg">
 	<!-- Bg video -->
 	<div id="darkness" class="darkness"></div>
 	<video autoplay muted loop id="myVideo">
 		<source src="./src/assets/video/nail.webm" type="video/mp4">
 	</video>
+	<img src="./src/assets/img/nail_mobile.webp" alt="">
 	<!-- Popup navigation -->
 	<nav class="popup-nav">
 		<div class="popup-nav__wrap">
@@ -183,7 +184,7 @@
 				<img class="rotate_right element-animation" src="./src/assets/img/main/7.jpeg" alt="">
 				<img class="rotate_left" src="./src/assets/img/main/2.png" alt="">
 				<img class="rotate_right element-animation" src="./src/assets/img/main/8.jpeg" alt="">
-				<img class="rotate_left" src="./src/assets/img/main/5.png" alt="">
+				<img class="rotate_left" src="./src/assets/img/lst.webp" alt="">
 			</div>
 		</div>
 	</section>
