--- a/courses.html
+++ b/courses.html
@@ -15,9 +15,11 @@
 </head>
 
 <body>
+	<!-- Здесь шаблон -->
 	<div class="popups">
 		<div class="popup_dark"></div>
 		<div class="container">
+			<!-- Шаблон -->
 			<div class="popup__wrap popup-one">
 				<div class="popup__info">
 					<div class="popup__info__title">
@@ -31,349 +33,40 @@
 						</div>
 						<div class="text">
 							<h4>Список закупки</h4>
-							<h3>Это то, что:</h3>
-							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
-							</ul>
-							<p>
-								Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне
-							</p>
+							<div class="mb-4">
+								<h3>Название: </h3>
+								<span>текст</span>
+							</div>
+							<div class="mb-4">
+								<h3>Цена: </h3>
+								<span>текст</span>
+							</div>
+							<div class="mb-4">
+								<h3>Формат обучения: </h3>
+								<span>текст</span>
+							</div>
+							<div class="mb-4">
+								<h3>Документ: </h3>
+								<span>текст</span>
+							</div>
+							<div class="mb-4">
+								<h3>Срок обучения: </h3>
+								<span>текст</span>
+							</div>
+							<div class="mb-4">
+								<h3>Программа: </h3>
+								<span>текст</span>
+							</div>
+							<div class="mb-8">
+								<h3>Дополнительно: </h3>
+								<span>текст</span>
+							</div>
 							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="popup__wrap popup-two">
-
-				<div class="popup__info">
-					<div class="popup__info__title">
-						<h1>ПРОБНЫЙ ДЕНЬ «НОВАЯ ПРОФЕССИЯ» </h1>
-						<img id="popup-close2" src="./src/assets/img/close.svg" alt="">
-					</div>
-					<div class="popup__info__desc">
-						<div class="buy">
-							<img src="./src/assets/img/Courses/7.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
-						</div>
-						<div class="text">
-							<h4>Пробный день - это рациональный и логичный ответ на вопросы:</h4>
-							<ul>
-								<li>-«Хочу ли я в beauti-сферу?»</li>
-								<li>-«Хочу ли я заниматься маникюром?»</li>
-								<li>-«Смогу ли я работать с клиентами?» </li>
-								<li>-«Подходит ли мне данное направление?» </li>
-								<li>-«Стоит ли тратить столько средств на обучение, материалы, оборудование на профессию, в которой возможно не буду работать?»</li>
-							</ul>
-
-							<h4>Содержание:</h4>
-							<h3>ТЕОРИЯ О ПРОФЕССИИ:</h3>
-							<ul>
-								<li>История маникюра</li>
-								<li>Введение в профессию</li>
-								<li>Списки материалов и оборудования</li>
-								<li>Финансовая платформа для старта</li>
-								<li>Правила работы и организация рабочего процесса</li>
-							</ul>
-							<h3>ТЕОРИЯ МАНИКЮРА</h3>
-							<ul>
-								<li>Анатомия и Физиология ногтя</li>
-								<li>Инструменты и оборудование</li>
-								<li>План выполнения маникюра</li>
-								<li>Материалы и их использование</li>
-								<li>Покрытие ногтей лаком, гель лаком</li>
-							</ul>
-							<h3>ПРАКТИКА</h3>
-							<p>Работа с типсами, опиливаем, покрываем, рисуем
-								Попробуем всё на себе, опил формы, работа с кутикулой
-								Потренируемся владеть аппаратом и кисточкой</p>
-							<h3>Срок обучения: 1 день </h3>
-							<h3>Документ: Сертификат 📄 </h3>
-							<h3>Дополнительно:</h3>
-							<ul>
-								<li>Поддержка онлайн </li>
-								<li>Консультации по любым возникающим вопросам </li>
-								<li>Скидочная программа лояльности при решении получить профессиональное, официальное образование в данном направлении</li>
-							</ul>
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="popup__wrap popup-three">
-
-				<div class="popup__info">
-					<div class="popup__info__title">
-						<h1>«МАСТЕР ЗДЕСЬ И СЕЙЧАС» 
-							БАЗОВЫЙ КУРС ПРОФЕССИОНАЛЬНОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК </h1>
-						<img id="popup-close3" src="./src/assets/img/close.svg" alt="">
-					</div>
-					<div class="popup__info__desc">
-						<div class="buy">
-							<img src="./src/assets/img/Courses/1.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
-						</div>
-						<div class="text">
-							<h4>Базовый курс «Комбинированный маникюр с покрытием гель лак с 0» </h4>
-							<p>Программа обучения с выдачей официального диплома государственного образца с присвоением 
-								профессии «мастер ногтевого сервиса»</p>
-							<h3>Формат обучения: </h3>
-							<ul>
-								<li>Групповой день с 10:00 до 17:00 2-3 ученика 18.000₽</li>
-								<li>Групповой вечер с 18:00 до 22:00 2-3 ученика 19.000₽ </li>
-								<li>Индивидуальный в любые удобные для вас дни и часы 23.000₽ </li>
-							</ul>
-							<h3>Документ: Диплом</h3>
-							<h3>Срок обучения: </h3>
-							<ul>
-								<li>Дневной формат 5 дней</li>
-								<li>Вечерний формат 7 дней </li>
-								<li>Индивидуальный 5 дней (дни обучения на ваш выбор) </li>
-							</ul>
-							<h4>Программа:</h4>
-							<h3>Блок 1: Комбинированный маникюр</h3>
-							<ul>
-								<li>- Анатомия и физиология ногтя</li>
-								<li>- Анатомия и физиология ногтя</li>
-								<li>- Анатомия и физиология ногтя</li>
-								<li>- Подготовка ногтевой пластины к покрытию гель лаком</li>
-							</ul>
-							<h3>Блок 2: Покрытие гель лаком</h3>
-							<ul>
-								<li>- Трёхфазная система покрытия</li>
-								<li>- Виды баз, работы с каждым видом</li>
-								<li>- Выравнивание ногтевой пластины базой</li>
-								<li>- Покрытие цветным гель лаком</li>
-								<li>- Виды финишного покрытия, работа с каждым видом</li>
-								<li>- Снятие искусственного материала</li>
-							</ul>
-							<h3>Блок 3: Дополнительные знания</h3>
-							<ul>
-								<li>- Дезинфекции, стерилизации инструментов</li>
-								<li>- Работа с отслойками</li>
-								<li>- Инфекции в работе и работа с проблемными ногтями</li>
-								<li>- Салонные экспресс дизайны: 3 вида</li>
-								<li>- Ремонт, реставрация и донаращивание ногтей</li>
-							</ul>
-							<h3>Блок 4: Справочник развития</h3>
-							<ul>
-								<li>- Список инструментов, материалов и оборудования, которые необходимы для работы мастером</li>
-								<li>- Работа с соц.сетями, оформлением и содержанием</li>
-								<li>- Качественные, красивые, продающие фото работ</li>
-								<li>- Скрипт общения с клиентом</li>
-								<li>- Финансовая составляющая работы, шаблоны, чек-листы для расчетов</li>
-							</ul>
-							<h4>Дополнительно:</h4>
-							<ul>
-								<li>поддержка 1 месяц (онлайн)</li>
-								<li>печатные материалы с информацией </li>
-								<li>внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об 
-									образовании и (или) о квалификации, документах об обучении) </li>
-								<li>оборудованное рабочее место, материалы и модели предоставляются </li>
-								<li>фото и видео контент для социальных сетей ваших работ</li>
-							</ul>
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="popup__wrap popup-four">
-
-				<div class="popup__info">
-					<div class="popup__info__title">
-						<h1>БАЗОВЫЙ КУРС ЭСТЕТИЧЕСКИЙ ПЕДИКЮР С ПОКРЫТИЕМ ГЕЛЬ ЛАК» </h1>
-						<img id="popup-close4" src="./src/assets/img/close.svg" alt="">
-					</div>
-					<div class="popup__info__desc">
-						<div class="buy">
-							<img src="./src/assets/img/Courses/3.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
-						</div>
-						<div class="text">
-							<h4>Программа обучения с выдачей официального диплома государственного образца с присвоением 
-								профессии «мастер ногтевого сервиса» </h4>
-							<h3>Формат обучения:</h3>
-							<ul>
-								<li>Индивидуальный</li>
-							</ul>
-							<h3>Документ: Диплом </h3>
-							<h3>Срок обучения: 2 дня</h3>
-							<h4>Программа:</h4>
-							<p>Программа учебного процесса состоит из 2 дней и включает в себя две практические отработки.</p>
-							<h3>На курсе мы разберём:</h3>
-							<ul>
-								<li>Анатомию и физиологию ногтей на ногах</li>
-								<li>Дезинфекцию и стерилизацию инструментов</li>
-								<li>Инструменты и материалы для работы</li>
-								<li>Технику комбинированного педикюра</li>
-								<li>Технику комбинированного педикюра</li>
-								<li>Технику комбинированного педикюра</li>
-								<li>Технику комбинированного педикюра</li>
-								<li>Заболевания и инфекции</li>
-							</ul>
-							<h4>Дополнительно:</h4>
-							<ul>
-								<li>поддержка 1 месяц (онлайн)</li>
-								<li>печатные материалы с информацией </li>
-								<li>внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об 
-									образовании и (или) о квалификации, документах об обучении) </li>
-								<li>оборудованное рабочее место, материалы и модели предоставляются</li>
-								<li>фото и видео контент для социальных сетей ваших работ</li>
-							</ul>
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="popup__wrap popup-five">
-
-				<div class="popup__info">
-					<div class="popup__info__title">
-						<h1>БАЗОВЫЙ КУРС КОМБИНИРОВАННОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК САМОЙ СЕБЕ В ДОМАШНИХ УСЛОВИЯХ</h1>
-						<img id="popup-close5" src="./src/assets/img/close.svg" alt="">
-					</div>
-					<div class="popup__info__desc">
-						<div class="buy">
-							<img src="./src/assets/img/Courses/8.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
-						</div>
-						<div class="text">
-							<h3>Формат обучения: </h3>
-							<ul>
-								<li>Групповой 2-3 ученика 5.000₽</li>
-								<li>Индивидуальный 7.000₽</li>
-							</ul>
-							<h3>Документ: Сертификат</h3>
-							<h3>Срок обучения: 1 день </h3>
-							<h4>Программа: </h4>
-							<ul>
-								<li>Анатомия и физиология ногтя</li>
-								<li>Базовые знания о дезинфекции и стерилизации инструментов</li>
-								<li>Комбbнированный маникюр с аппаратом</li>
-								<li>Техника покрытия гель лака</li>
-								<li>Список необходимых материалов и инструментов а так же техники</li>
-							</ul>
-							<h4>Дополнительно: </h4>
-							<ul>
-								<li>✅ поддержка 1 месяц (онлайн) </li>
-								<li>✅ печатные материалы с информацией</li>
-								<li> ✅ скидочная программа лояльности на базовые курсы в случае вашего решения заняться данным направлением профессионально</li>
-								<li>✅списки закупок магазинов и платформ, где можно приобрести все необходимое для работы дома по выгодным ценам </li>
-								<li>✅оборудованное рабочее место, материалы предоставляются</li>
-							</ul>
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="popup__wrap popup-six">
-
-				<div class="popup__info">
-					<div class="popup__info__title">
-						<h1>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА ЭКСПЕРТА В МАНИКЮРЕ </h1>
-						<img id="popup-close6" src="./src/assets/img/close.svg" alt="">
-					</div>
-					<div class="popup__info__desc">
-						<div class="buy">
-							<img src="./src/assets/img/Courses/4.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll1">Записаться</a>
-						</div>
-						<div class="text">
-							<h3>Формат обучения: </h3>
-							<ul>
-								<li>Групповой 2-3 ученика 8.000₽ </li>
-								<li>Индивидуальный 10.000₽ </li>
-							</ul>
-							<h3>Документ: Свидетельство </h3>
-							<h3>Срок обучения: 1 день </h3>
-							<h4>Программа: </h4>
-							<p>Программа: индивидуальная, разбираем вопросы и техники, которые волную вас на данный момент, а так же все новые материалы, которые считаются новинками в современной nail-индустрии</p>
-							<h4>Дополнительно: </h4>
-							<ul>
-								<li>✅ поддержка 1 месяц (онлайн) </li>
-								<li>✅ печатные материалы с информацией </li>
-								<li>✅внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об образовании и (или) о квалификации, документах об обучении)</li>
-								<li>✅ оборудованное рабочее место, материалы и модели предоставляются </li>
-								<li>✅ фото и видео контент для социальных сетей ваших работ</li>
-							</ul>
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll2">Записаться</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="popup__wrap popup-seven">
-
-				<div class="popup__info">
-					<div class="popup__info__title">
-						<h1>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА ЭКСПЕРТА В ПЕДИКЮРЕ 10000 8000</h1>
-						<img id="popup-close7" src="./src/assets/img/close.svg" alt="">
-					</div>
-					<div class="popup__info__desc">
-						<div class="buy">
-							<img src="./src/assets/img/Courses/5.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
-						</div>
-						<div class="text">
-							<h3>Формат обучения:</h3>
-							<ul><li>Индивидуальный</li></ul>
-							<h3>Документ: Свидетельство </h3>
-							<h3>Срок обучения: 1 день</h3>
-							<p>Программа: индивидуальная, разбираем вопросы и техники, которые волную вас на данный момент, а также все новые материалы, которые считаются новинками в современной индустрии</p>
-							<ul>
-								<li>✅ поддержка 1 месяц (онлайн) </li>
-								<li>✅ печатные материалы с информацией </li>
-								<li>✅внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об образовании и (или) о квалификации, документах об обучении)</li>
-								<li>✅ оборудованное рабочее место, материалы и модели предоставляются </li>
-								<li>✅ фото и видео контент для социальных сетей ваших работ</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="popup__wrap popup-eight">
-
-				<div class="popup__info">
-					<div class="popup__info__title">
-						<h1>БАЗОВЫЙ КУРС НАРАЩИВАНИЯ НОГТЕЙ БЕЗ ОПИЛА </h1>
-						<img id="popup-close8" src="./src/assets/img/close.svg" alt="">
-					</div>
-					<div class="popup__info__desc">
-						<div class="buy">
-							<img src="./src/assets/img/Courses/2.png" alt="">
-							<a target="_blank" href="https://wa.me/+79201204435" class="enroll">Записаться</a>
-						</div>
-						<div class="text">
-							<p>Программа обучения с выдачей официального диплома государственного образца с присвоением профессии «мастер ногтевого сервиса»</p>
-							<h3>Формат обучения: </h3>
-							<ul>
-								<li>Групповой 2-3 ученика 12.000₽ </li>
-								<li>Индивидуальный 15.000₽ </li>
-							</ul>
-							<h3>Документ: Диплом </h3>
-							<h3>Срок обучения: 2 дня </h3>
-							<h4>Программа: </h4>
-							<ul>
-								<li>Инструменты и материалы</li>
-								<li>Техника наращивания</li>
-								<li>Создание формы</li>
-								<li>Виды и техника дизайнов</li>
-							</ul>
-							<ul>
-								<li>✅ поддержка 1 месяц (онлайн) </li>
-								<li>✅ печатные материалы с информацией </li>
-								<li>✅внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об образовании и (или) о квалификации, документах об обучении)</li>
-								<li>✅ оборудованное рабочее место, материалы и модели предоставляются </li>
-								<li>✅ фото и видео контент для социальных сетей ваших работ</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
+			<!-- Шаблон -->
 		</div>
 	</div>
 	<!-- Bg video -->
